# sodoku-solver

./: .gitignore  README.md  puzzle.txt  pyproject.toml
sodoku_solver/: __main__.py  consts.py  generate.py  problem.py  solution.py  solve.py  templates.py
template/: pyproject.toml
