[project]
name = "sodoku-solver"
version = "0.1.0"
description = "Package Manager Sodoku Solver"
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
dependencies = [
    "pdm-pep517>=0.12.7",
    "tomli>=2.0.1",
    "pypiserver>=1.5.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
generate = "python -m sodoku_solver generate"
serve = "pypi-server run output/packages"
pypi.shell = "python -m sodoku_solver generate && pypi-server run output/packages"
new = "python -m sodoku_solver new"
solve = "python -m sodoku_solver solve"
puzzle = "python -m sodoku_solver puzzle"

